@@ -115,6 +115,10 @@ IN DEVELOPMENT
     * New win32utils.get_local_appdata_location() provides access to a local
       directory for storing data.  (Mark Hammond)
 
+    * The Repository model has been extended to allow some formats to
+      expose data via CHK based lookups (Though no formats support this as
+      yet). (Robert Collins)
+
 
 bzr 1.7 2008-09-23
 ------------------
